...
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0C00897B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/addToBasket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00897B"
            android:text="Add to basket"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
...
